k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  labels:
    app: springboot-app
spec:
  type: NodePort
  selector:
    app: springboot-app
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
